--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Grille CSS</title>
 		<link rel="stylesheet" type="text/css" href="grid.css">
 	</head>
