--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
 		<meta charset="UTF-8">
 		<title>Grille CSS</title>
 		<link rel="stylesheet" type="text/css" href="grid.css">
+		<style type="text/css">
+			h1#nbColumn:before {
+				margin: 0 10px;
+			}
+
+			@media screen and (min-width: 1200px) {
+				h1#nbColumn:before {
+					content: "5";
+				}
+			}
+
+			@media screen and (min-width: 768px) and (max-width: 1200px) {
+				h1#nbColumn:before {
+					content: "2";
+				}
+			}
+
+			@media screen and (max-width: 768px) {
+				h1#nbColumn:before {
+					content: "1";
+				}
+			}
+		</style>
 	</head>
 	<body>
+		<h1 id="nbColumn">columns</h1>
 		<div id="columns">
 			<div class="column column-2 medium-column-5 small-column-10">
 				<div class="wrap">
